[package]
name = "bfc"
version = "1.10.0"
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
edition = "2018"
homepage = "https://github.com/Wilfred/bfc"
repository = "https://github.com/Wilfred/bfc"
description = "An industrial-grade brainfuck compiler"
readme = "README.md"
license = "GPL-2.0"

[dependencies]
llvm-sys = "100.0.0"
itertools = "0.9"
tempfile = "3.1"
getopts = "0.2.21"
matches = "0.1.8"
colored = "2"

[dev-dependencies]
quickcheck = "0.9.2"
pretty_assertions = "0.6.1"
