[package]
name = "bfc"
version = "1.12.0"
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
edition = "2021"
homepage = "https://github.com/Wilfred/bfc"
repository = "https://github.com/Wilfred/bfc"
description = "An industrial-grade brainfuck compiler"
readme = "README.md"
license = "GPL-2.0"
rust-version = "1.64.0"

[dependencies]
llvm-sys = "130.0.5"
itertools = "0.10.5"
tempfile = "3.1"
clap = { version = "4.3.4", features = ["cargo", "string", "wrap_help"] }
ariadne = "0.3.0"

[dev-dependencies]
quickcheck = "0.9.2"
pretty_assertions = "1.3.0"
